fixed sizing, file tab icon
need to still fix a small gap between icon and navbar

--- a/app/_components/footer/footer.module.scss
+++ b/app/_components/footer/footer.module.scss
@@ -1,6 +1,5 @@
 .footer {
-    background-color: var(--include-purple);
-    color: var(--text-light);
+    background: var(--include-gradient);    color: var(--text-light);
     text-align: center;
     padding: 3rem 0;
     font-size: 1.25rem;
