--- a/app/globals.scss
+++ b/app/globals.scss
@@ -11,8 +11,11 @@
   --text-midtone: #414141;
   --text-light: #FFF;
 
-  --edge-spacing: 200px;
+  --edge-spacing: 100px;
+  --card-spacing: calc(8px * 10);
   --folder-tab-width: 1076px;
+
+  --include-gradient: linear-gradient(90deg, #332950, #3C257E, #322D41);
 }
 
 * {
@@ -24,15 +27,4 @@
 a {
   color: inherit;
   text-decoration: none;
-}
-
-.layout-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.main-content {
-  flex: 1; 
-  padding: 2rem;
 }
